<resources>
    <string name="app_name">TicTacToe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome!</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="example_email_com">example@email.com</string>
    <string name="password">password</string>
    <string name="need_help">Need help?</string>
    <string name="hello_there">Hello There!</string>
</resources>